src/test/ui/error-codes/E0565-2.stderr
error[E0565]: literal in `deprecated` value must be a string
  --> $DIR/E0565-2.rs:2:22
   |
LL | #[deprecated(since = b"1.29", note = "hi")]
   |                      -^^^^^^
   |                      |
   |                      help: consider removing the prefix

error: aborting due to previous error

For more information about this error, try `rustc --explain E0565`.
