src/test/ui/error-codes/E0565-2.rs
// repr currently doesn't support literals
#[deprecated(since = b"1.29", note = "hi")] //~ ERROR E0565
struct A {  }

fn main() {  }
